# python-project-51

./: Makefile  README.md  pyproject.toml  setup.cfg
page_loader/: __init__.py
page_loader/modules/: download_page.py  parse_url.py  parser_args.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_download_page.py  test_parse_url.py
tests/fixtures/: expected.html  expected_html.html
