[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["svetlana_akaemova <akaemova.sv@mail.ru>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.13.0"
requests_mock = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.pytest.ini_options]
pythonpath = [
 ".",
]
